generated/grammar/DeepLearningDSLParser.py
# Generated from grammar/DeepLearningDSL.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class DeepLearningDSLParser ( Parser ):

    grammarFileName = "DeepLearningDSL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'else'", "'for'", "'while'", 
                     "'def'", "'return'", "'linear_regression'", "'mlp_classifier'", 
                     "'neural_network'", "'predict'", "'train'", "'transpose'", 
                     "'inverse'", "'matmult'", "'matadd'", "'matsub'", "'read_file'", 
                     "'write_file'", "'print'", "'plot'", "'scatter'", "'histogram'", 
                     "'sin'", "'cos'", "'tan'", "'sqrt'", "'='", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'^'", "'=='", "'!='", 
                     "'<'", "'<='", "'>'", "'>='", "'('", "')'", "'{'", 
                     "'}'", "'['", "']'", "','", "';'" ]

    symbolicNames = [ "<INVALID>", "IF", "ELSE", "FOR", "WHILE", "DEF", 
                      "RETURN", "LINEAR_REGRESSION", "MLP_CLASSIFIER", "NEURAL_NETWORK", 
                      "PREDICT", "TRAIN", "TRANSPOSE", "INVERSE", "MATMULT", 
                      "MATADD", "MATSUB", "READ_FILE", "WRITE_FILE", "PRINT", 
                      "PLOT", "SCATTER", "HISTOGRAM", "SIN", "COS", "TAN", 
                      "SQRT", "ASSIGN", "PLUS", "MINUS", "MULT", "DIV", 
                      "MOD", "POWER", "EQ", "NE", "LT", "LE", "GT", "GE", 
                      "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACKET", 
                      "RBRACKET", "COMMA", "SEMICOLON", "NUMBER", "FLOAT", 
                      "STRING", "ID", "WS", "COMMENT" ]

    RULE_program = 0
    RULE_list_expr = 1
    RULE_statement_list = 2
    RULE_statement = 3
    RULE_assignment = 4
    RULE_expression = 5
    RULE_expr_rest = 6
    RULE_term = 7
    RULE_term_rest = 8
    RULE_factor = 9
    RULE_factor_rest = 10
    RULE_base = 11
    RULE_unary_expr = 12
    RULE_trig_func = 13
    RULE_matrix_expr = 14
    RULE_matrix_content = 15
    RULE_matrix_content_rest = 16
    RULE_matrix_row = 17
    RULE_expression_list = 18
    RULE_expression_list_rest = 19
    RULE_matrix_operation = 20
    RULE_conditional = 21
    RULE_else_part = 22
    RULE_condition = 23
    RULE_rel_op = 24
    RULE_loop = 25
    RULE_for_loop = 26
    RULE_while_loop = 27
    RULE_function_def = 28
    RULE_param_list = 29
    RULE_param_list_rest = 30
    RULE_return_stmt = 31
    RULE_function_call = 32
    RULE_arg_list = 33
    RULE_arg_list_rest = 34
    RULE_ml_function = 35
    RULE_io_function = 36
    RULE_plot_function = 37

    ruleNames =  [ "program", "list_expr", "statement_list", "statement", 
                   "assignment", "expression", "expr_rest", "term", "term_rest", 
                   "factor", "factor_rest", "base", "unary_expr", "trig_func", 
                   "matrix_expr", "matrix_content", "matrix_content_rest", 
                   "matrix_row", "expression_list", "expression_list_rest", 
                   "matrix_operation", "conditional", "else_part", "condition", 
                   "rel_op", "loop", "for_loop", "while_loop", "function_def", 
                   "param_list", "param_list_rest", "return_stmt", "function_call", 
                   "arg_list", "arg_list_rest", "ml_function", "io_function", 
                   "plot_function" ]

    EOF = Token.EOF
    IF=1
    ELSE=2
    FOR=3
    WHILE=4
    DEF=5
    RETURN=6
    LINEAR_REGRESSION=7
    MLP_CLASSIFIER=8
    NEURAL_NETWORK=9
    PREDICT=10
    TRAIN=11
    TRANSPOSE=12
    INVERSE=13
    MATMULT=14
    MATADD=15
    MATSUB=16
    READ_FILE=17
    WRITE_FILE=18
    PRINT=19
    PLOT=20
    SCATTER=21
    HISTOGRAM=22
    SIN=23
    COS=24
    TAN=25
    SQRT=26
    ASSIGN=27
    PLUS=28
    MINUS=29
    MULT=30
    DIV=31
    MOD=32
    POWER=33
    EQ=34
    NE=35
    LT=36
    LE=37
    GT=38
    GE=39
    LPAREN=40
    RPAREN=41
    LBRACE=42
    RBRACE=43
    LBRACKET=44
    RBRACKET=45
    COMMA=46
    SEMICOLON=47
    NUMBER=48
    FLOAT=49
    STRING=50
    ID=51
    WS=52
    COMMENT=53

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement_list(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.Statement_listContext,0)


        def EOF(self):
            return self.getToken(DeepLearningDSLParser.EOF, 0)

        def getRuleIndex(self):
            return DeepLearningDSLParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = DeepLearningDSLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.statement_list()
            self.state = 77
            self.match(DeepLearningDSLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACKET(self):
            return self.getToken(DeepLearningDSLParser.LBRACKET, 0)

        def expression_list(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.Expression_listContext,0)


        def RBRACKET(self):
            return self.getToken(DeepLearningDSLParser.RBRACKET, 0)

        def getRuleIndex(self):
            return DeepLearningDSLParser.RULE_list_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterList_expr" ):
                listener.enterList_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitList_expr" ):
                listener.exitList_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_expr" ):
                return visitor.visitList_expr(self)
            else:
                return visitor.visitChildren(self)




    def list_expr(self):

        localctx = DeepLearningDSLParser.List_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_list_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(DeepLearningDSLParser.LBRACKET)
            self.state = 80
            self.expression_list()
            self.state = 81
            self.match(DeepLearningDSLParser.RBRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Statement_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.StatementContext,0)


        def statement_list(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.Statement_listContext,0)


        def getRuleIndex(self):
            return DeepLearningDSLParser.RULE_statement_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement_list" ):
                listener.enterStatement_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement_list" ):
                listener.exitStatement_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement_list" ):
                return visitor.visitStatement_list(self)
            else:
                return visitor.visitChildren(self)




    def statement_list(self):

        localctx = DeepLearningDSLParser.Statement_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement_list)
        try:
            self.state = 87
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 3, 4, 5, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 29, 40, 44, 48, 49, 50, 51]:
                self.enterOuterAlt(localctx, 1)
                self.state = 83
                self.statement()
                self.state = 84
                self.statement_list()
                pass
            elif token in [-1, 6, 43]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.AssignmentContext,0)


        def SEMICOLON(self):
            return self.getToken(DeepLearningDSLParser.SEMICOLON, 0)

        def conditional(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.ConditionalContext,0)


        def loop(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.LoopContext,0)


        def function_def(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.Function_defContext,0)


        def function_call(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.Function_callContext,0)


        def expression(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.ExpressionContext,0)


        def getRuleIndex(self):
            return DeepLearningDSLParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = DeepLearningDSLParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statement)
        try:
            self.state = 101
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 89
                self.assignment()
                self.state = 90
                self.match(DeepLearningDSLParser.SEMICOLON)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 92
                self.conditional()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 93
                self.loop()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 94
                self.function_def()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 95
                self.function_call()
                self.state = 96
                self.match(DeepLearningDSLParser.SEMICOLON)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 98
                self.expression()
                self.state = 99
                self.match(DeepLearningDSLParser.SEMICOLON)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(DeepLearningDSLParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(DeepLearningDSLParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.ExpressionContext,0)


        def getRuleIndex(self):
            return DeepLearningDSLParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = DeepLearningDSLParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(DeepLearningDSLParser.ID)
            self.state = 104
            self.match(DeepLearningDSLParser.ASSIGN)
            self.state = 105
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.TermContext,0)


        def expr_rest(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.Expr_restContext,0)


        def getRuleIndex(self):
            return DeepLearningDSLParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = DeepLearningDSLParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.term()
            self.state = 108
            self.expr_rest()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expr_restContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PLUS(self):
            return self.getToken(DeepLearningDSLParser.PLUS, 0)

        def term(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.TermContext,0)


        def expr_rest(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.Expr_restContext,0)


        def MINUS(self):
            return self.getToken(DeepLearningDSLParser.MINUS, 0)

        def getRuleIndex(self):
            return DeepLearningDSLParser.RULE_expr_rest

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_rest" ):
                listener.enterExpr_rest(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_rest" ):
                listener.exitExpr_rest(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_rest" ):
                return visitor.visitExpr_rest(self)
            else:
                return visitor.visitChildren(self)




    def expr_rest(self):

        localctx = DeepLearningDSLParser.Expr_restContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_expr_rest)
        try:
            self.state = 119
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [28]:
                self.enterOuterAlt(localctx, 1)
                self.state = 110
                self.match(DeepLearningDSLParser.PLUS)
                self.state = 111
                self.term()
                self.state = 112
                self.expr_rest()
                pass
            elif token in [29]:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.match(DeepLearningDSLParser.MINUS)
                self.state = 115
                self.term()
                self.state = 116
                self.expr_rest()
                pass
            elif token in [34, 35, 36, 37, 38, 39, 41, 45, 46, 47]:
                self.enterOuterAlt(localctx, 3)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.FactorContext,0)


        def term_rest(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.Term_restContext,0)


        def getRuleIndex(self):
            return DeepLearningDSLParser.RULE_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm" ):
                listener.enterTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm" ):
                listener.exitTerm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerm" ):
                return visitor.visitTerm(self)
            else:
                return visitor.visitChildren(self)




    def term(self):

        localctx = DeepLearningDSLParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_term)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.factor()
            self.state = 122
            self.term_rest()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Term_restContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MULT(self):
            return self.getToken(DeepLearningDSLParser.MULT, 0)

        def factor(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.FactorContext,0)


        def term_rest(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.Term_restContext,0)


        def DIV(self):
            return self.getToken(DeepLearningDSLParser.DIV, 0)

        def MOD(self):
            return self.getToken(DeepLearningDSLParser.MOD, 0)

        def getRuleIndex(self):
            return DeepLearningDSLParser.RULE_term_rest

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm_rest" ):
                listener.enterTerm_rest(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm_rest" ):
                listener.exitTerm_rest(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerm_rest" ):
                return visitor.visitTerm_rest(self)
            else:
                return visitor.visitChildren(self)




    def term_rest(self):

        localctx = DeepLearningDSLParser.Term_restContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_term_rest)
        try:
            self.state = 137
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [30]:
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self.match(DeepLearningDSLParser.MULT)
                self.state = 125
                self.factor()
                self.state = 126
                self.term_rest()
                pass
            elif token in [31]:
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.match(DeepLearningDSLParser.DIV)
                self.state = 129
                self.factor()
                self.state = 130
                self.term_rest()
                pass
            elif token in [32]:
                self.enterOuterAlt(localctx, 3)
                self.state = 132
                self.match(DeepLearningDSLParser.MOD)
                self.state = 133
                self.factor()
                self.state = 134
                self.term_rest()
                pass
            elif token in [28, 29, 34, 35, 36, 37, 38, 39, 41, 45, 46, 47]:
                self.enterOuterAlt(localctx, 4)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FactorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def base(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.BaseContext,0)


        def factor_rest(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.Factor_restContext,0)


        def getRuleIndex(self):
            return DeepLearningDSLParser.RULE_factor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFactor" ):
                listener.enterFactor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFactor" ):
                listener.exitFactor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFactor" ):
                return visitor.visitFactor(self)
            else:
                return visitor.visitChildren(self)




    def factor(self):

        localctx = DeepLearningDSLParser.FactorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_factor)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.base()
            self.state = 140
            self.factor_rest()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Factor_restContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def POWER(self):
            return self.getToken(DeepLearningDSLParser.POWER, 0)

        def base(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.BaseContext,0)


        def factor_rest(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.Factor_restContext,0)


        def getRuleIndex(self):
            return DeepLearningDSLParser.RULE_factor_rest

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFactor_rest" ):
                listener.enterFactor_rest(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFactor_rest" ):
                listener.exitFactor_rest(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFactor_rest" ):
                return visitor.visitFactor_rest(self)
            else:
                return visitor.visitChildren(self)




    def factor_rest(self):

        localctx = DeepLearningDSLParser.Factor_restContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_factor_rest)
        try:
            self.state = 147
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [33]:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.match(DeepLearningDSLParser.POWER)
                self.state = 143
                self.base()
                self.state = 144
                self.factor_rest()
                pass
            elif token in [28, 29, 30, 31, 32, 34, 35, 36, 37, 38, 39, 41, 45, 46, 47]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BaseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(DeepLearningDSLParser.ID, 0)

        def NUMBER(self):
            return self.getToken(DeepLearningDSLParser.NUMBER, 0)

        def FLOAT(self):
            return self.getToken(DeepLearningDSLParser.FLOAT, 0)

        def STRING(self):
            return self.getToken(DeepLearningDSLParser.STRING, 0)

        def LPAREN(self):
            return self.getToken(DeepLearningDSLParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(DeepLearningDSLParser.RPAREN, 0)

        def list_expr(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.List_exprContext,0)


        def matrix_expr(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.Matrix_exprContext,0)


        def function_call(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.Function_callContext,0)


        def unary_expr(self):
            return self.getTypedRuleContext(DeepLearningDSLParser.Unary_exprContext,0)


        def getRuleIndex(self):
            return DeepLearningDSLParser.RULE_base

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBase" ):
                listener.enterBase(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBase" ):
                listener.exitBase(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBase" ):
                return visitor.visitBase(self)
            else:
                return visitor.visitChildren(self)




    def base(self):

        localctx = DeepLearningDSLParser.BaseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_base)
        try:
            self.state = 161
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 149
                self.match(DeepLearningDSLParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 150
                self.match(DeepLearningDSLParser.NUMBER)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 151
                self.match(DeepLearningDSLParser.FLOAT)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 152
                self.match(DeepLearningDSLParser.STRING)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 153
                self.match(DeepLearningDSLParser.LPAREN)
                self.state = 154
                self.expression()
                self.state = 155
                self.match(DeepLearningDSLParser.RPAREN)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 157
                self.list_expr()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 158
                self.matrix_expr()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 159
                self.function_call()
                pass
